changes day-10 for responsive design and text with instructions added

--- a/day-10/index.html
+++ b/day-10/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hold Shift to Check Multiple Checkboxes</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -12,6 +13,10 @@
   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
 
   -->
+    <div class="text">
+      Clicks a checkbox, holds Shift, and then clicks another checkbox a few
+      rows down.
+    </div>
     <div class="inbox">
       <div class="item">
         <input type="checkbox" />
