--- a/day-3/index.html
+++ b/day-3/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scoped CSS Variables and JS</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -9,30 +10,36 @@
     <h2>Update CSS Variables with <span class="hl">JS</span></h2>
 
     <div class="controls">
-      <label for="spacing">Spacing:</label>
-      <input
-        id="spacing"
-        type="range"
-        name="spacing"
-        min="10"
-        max="200"
-        value="10"
-        data-sizing="px"
-      />
+      <div class="control-item">
+        <label for="spacing">Spacing:</label>
+        <input
+          id="spacing"
+          type="range"
+          name="spacing"
+          min="10"
+          max="200"
+          value="10"
+          data-sizing="px"
+        />
+      </div>
 
-      <label for="blur">Blur:</label>
-      <input
-        id="blur"
-        type="range"
-        name="blur"
-        min="0"
-        max="25"
-        value="10"
-        data-sizing="px"
-      />
+      <div class="control-item">
+        <label for="blur">Blur:</label>
+        <input
+          id="blur"
+          type="range"
+          name="blur"
+          min="0"
+          max="25"
+          value="10"
+          data-sizing="px"
+        />
+      </div>
 
-      <label for="base">Base Color</label>
-      <input id="base" type="color" name="base" value="#ffc600" />
+      <div class="control-item">
+        <label for="base">Base Color</label>
+        <input id="base" type="color" name="base" value="#ffc600" />
+      </div>
     </div>
 
     <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
