--- a/day-9/index.html
+++ b/day-9/index.html
@@ -2,7 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Console Tricks!</title>
+
+    <style>
+      body {
+        color: white;
+        font-family: "Ubuntu Mono", monospace;
+        font-size: 32px;
+        background-color: #925575;
+      }
+    </style>
   </head>
   <body>
     <h2>Console Tricks!</h2>
