--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-2/img/screenshot02.png" alt="day2-screenshot" />
+        <img src="./day-2/img/screenshot02.jpg" alt="day2-screenshot" />
         <div class="challengeInfo">
           <h3>Day 2</h3>
           <p>JS + CSS Clock</p>
