day-5 mobile-view

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-5/img/screenshot05.png" alt="day5-screenshot" />
+        <img src="./day-5/img/screenshot05.jpg" alt="day5-screenshot" />
         <div class="challengeInfo">
           <h3>Day 5</h3>
           <p>Flex Panel Gallery</p>
