renaming of folders from day-01 to day-09 and resize of the background-image day-01

--- a/index.html
+++ b/index.html
@@ -28,126 +28,126 @@
     </header>
     <section class="challengesContainer">
       <div class="challenge">
-        <img src="./day-1/img/screenshot.jpg" alt="day1-screenshot" />
+        <img src="./day-01/img/screenshot.jpg" alt="day01-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 1</h3>
+          <h3>Day 01</h3>
           <p>JavaScript Drum Kit</p>
           <div class="challengeLinks">
-            <a href="./day-1/index.html">Demo</a>
+            <a href="./day-01/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/Day-1"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-01"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-2/img/screenshot02.jpg" alt="day2-screenshot" />
+        <img src="./day-02/img/screenshot02.jpg" alt="day02-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 2</h3>
+          <h3>Day 02</h3>
           <p>JS + CSS Clock</p>
           <div class="challengeLinks">
-            <a href="./day-2/index.html">Demo</a>
+            <a href="./day-02/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-2"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-02"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-3/img/screenshot03.png" alt="day3-screenshot" />
+        <img src="./day-03/img/screenshot03.png" alt="day03-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 3</h3>
+          <h3>Day 03</h3>
           <p>Live Image Editor</p>
           <div class="challengeLinks">
-            <a href="./day-3/index.html">Demo</a>
+            <a href="./day-03/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-3"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-03"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-4/img/screenshot04.png" alt="day4-screenshot" />
+        <img src="./day-04/img/screenshot04.png" alt="day04-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 4</h3>
+          <h3>Day 04</h3>
           <p>Array Cardio Part 1</p>
           <div class="challengeLinks">
-            <a href="./day-4/index.html">Demo</a>
+            <a href="./day-04/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-4"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-04"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-5/img/screenshot05.jpg" alt="day5-screenshot" />
+        <img src="./day-05/img/screenshot05.jpg" alt="day05-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 5</h3>
+          <h3>Day 05</h3>
           <p>Flex Panel Gallery</p>
           <div class="challengeLinks">
-            <a href="./day-5/index.html">Demo</a>
+            <a href="./day-05/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-5"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-05"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-6/img/screenshot06-01.png" alt="day6-screenshot" />
+        <img src="./day-06/img/screenshot06-01.png" alt="day06-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 6</h3>
+          <h3>Day 06</h3>
           <p>City Search</p>
           <div class="challengeLinks">
-            <a href="./day-6/index.html">Demo</a>
+            <a href="./day-06/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-6"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-06"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-7/img/screenshot07.png" alt="day8-screenshot" />
+        <img src="./day-07/img/screenshot07.png" alt="day08-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 7</h3>
+          <h3>Day 07</h3>
           <p>Array Cardio Part 2</p>
           <div class="challengeLinks">
-            <a href="./day-7/index.html">Demo</a>
+            <a href="./day-07/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-7"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-07"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-8/img/screenshot08.png" alt="day8-screenshot" />
+        <img src="./day-08/img/screenshot08.png" alt="day08-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 8</h3>
+          <h3>Day 08</h3>
           <p>HTML5 Canvas</p>
           <div class="challengeLinks">
-            <a href="./day-8/index.html">Demo</a>
+            <a href="./day-08/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-8"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-08"
               >Source</a
             >
           </div>
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-9/img/screenshot09.png" alt="day9-screenshot" />
+        <img src="./day-09/img/screenshot09.png" alt="day09-screenshot" />
         <div class="challengeInfo">
-          <h3>Day 9</h3>
+          <h3>Day 09</h3>
           <p>Chrome Dev Tools</p>
           <div class="challengeLinks">
-            <a href="./day-9/index.html">Demo</a>
+            <a href="./day-09/index.html">Demo</a>
             <a
-              href="https://github.com/melissavi08/javascript-30/tree/main/day-9"
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-09"
               >Source</a
             >
           </div>
