readme file changes fron day-02 to day-06 + screenshot day-04

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-04/img/screenshot04.png" alt="day04-screenshot" />
+        <img src="./day-04/img/screenshot04.jpg" alt="day04-screenshot" />
         <div class="challengeInfo">
           <h3>Day 04</h3>
           <p>Array Cardio Part 1</p>
